calendar: Fix line-wrapping of calendar events
Commit 929636ebd0b8f428 broke line-wrapping of longish calendar events,
add back the required CSS width.

https://bugzilla.gnome.org/show_bug.cgi?id=703893

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -1161,6 +1161,11 @@ StScrollBar StButton#vhandle:active {
 
 /* Calendar popup */
 
+#calendarArea {
+    /* this is the total width of the popup */
+    max-width: 720px;
+}
+
 .calendar-vertical-separator {
     -stipple-width: 1px;
     -stipple-color: #505050;
